# GTM-For-Events

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: bright-data-gtm-my-events-proposal.md
invite_viewer/: README.md  package-lock.json  package.json
invite_viewer/app/: globals.css  layout.tsx  page.tsx
invite_viewer/app/components/: InviteViewer.tsx
invite_viewer/app/dashboard/: page.tsx
invite_viewer/app/lib/: report-shape.ts  reports.ts
src/invite_finder/: __init__.py  agent.py  brightdata.py  cli.py  config.py  event.py  models.py
tests/: test_agent_helpers.py  test_brightdata.py  test_cli.py  test_event.py
