[project]
name = "search-for-invite-bd"
version = "0.1.0"
description = "OpenAI Agents SDK workflow for discovering city-specific LinkedIn profiles using Bright Data SERP and Web Unlocker."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "eval-type-backport>=0.2.2; python_version < '3.10'",
    "openai-agents>=0.5.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
invite-finder = "invite_finder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invite_finder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
